--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
@@ -14,20 +14,58 @@
             <objects>
                 <viewController title="ImageList" id="BYZ-38-t0r" userLabel="ImagesList" customClass="ImagesListViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="8XP-pr-f1W">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <color key="backgroundColor" name="YP Black (iOS)"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="199" id="Lo2-TU-4K8" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="199"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="224" id="Lo2-TU-4K8" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="375" height="224"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Lo2-TU-4K8" id="pOR-uW-iT9">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="199"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="224"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="s59-ZI-dQZ">
+                                                    <rect key="frame" x="16" y="4" width="343" height="216"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="16"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sRC-af-bmE" userLabel="Like">
+                                                    <rect key="frame" x="315" y="4" width="44" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="44" id="DdQ-EI-xjJ"/>
+                                                        <constraint firstAttribute="height" constant="44" id="Mu5-cH-rMS"/>
+                                                    </constraints>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                    <state key="normal" image="ActiveLikeButton"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 сентября 2024" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSJ-kf-nJd" userLabel="Date Label">
+                                                    <rect key="frame" x="23.999999999999993" y="196.33333333333334" width="105.33333333333331" height="15.666666666666657"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" name="YP White (iOS)"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="s59-ZI-dQZ" firstAttribute="top" secondItem="pOR-uW-iT9" secondAttribute="top" constant="4" id="3JJ-xK-wUH"/>
+                                                <constraint firstItem="zSJ-kf-nJd" firstAttribute="leading" secondItem="s59-ZI-dQZ" secondAttribute="leading" constant="8" id="HvB-9D-jMb"/>
+                                                <constraint firstItem="s59-ZI-dQZ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="zSJ-kf-nJd" secondAttribute="trailing" constant="8" id="TMG-rZ-exY"/>
+                                                <constraint firstItem="s59-ZI-dQZ" firstAttribute="leading" secondItem="pOR-uW-iT9" secondAttribute="leading" constant="16" id="Vl2-aN-gf6"/>
+                                                <constraint firstItem="s59-ZI-dQZ" firstAttribute="trailing" secondItem="sRC-af-bmE" secondAttribute="trailing" id="b8L-PO-5DP"/>
+                                                <constraint firstItem="sRC-af-bmE" firstAttribute="top" secondItem="s59-ZI-dQZ" secondAttribute="top" id="g0N-gN-5cI"/>
+                                                <constraint firstAttribute="bottom" secondItem="s59-ZI-dQZ" secondAttribute="bottom" constant="4" id="j5L-tN-cqZ"/>
+                                                <constraint firstAttribute="trailing" secondItem="s59-ZI-dQZ" secondAttribute="trailing" constant="16" id="wnL-fN-L8B"/>
+                                                <constraint firstItem="s59-ZI-dQZ" firstAttribute="bottom" secondItem="zSJ-kf-nJd" secondAttribute="bottom" constant="8" id="y0e-wQ-Zn8"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" name="YP Background (iOS)"/>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -39,10 +77,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="YP Black (iOS)"/>
                         <constraints>
-                            <constraint firstItem="8XP-pr-f1W" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="W2i-E5-PGl"/>
                             <constraint firstAttribute="trailing" secondItem="8XP-pr-f1W" secondAttribute="trailing" id="ZQa-wG-FME"/>
                             <constraint firstItem="8XP-pr-f1W" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="foy-j0-SgW"/>
-                            <constraint firstAttribute="bottom" secondItem="8XP-pr-f1W" secondAttribute="bottom" id="ubX-ew-65s"/>
+                            <constraint firstItem="8XP-pr-f1W" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="lqQ-3S-BNA"/>
+                            <constraint firstAttribute="bottom" secondItem="8XP-pr-f1W" secondAttribute="bottom" id="rVk-lj-92v"/>
                         </constraints>
                     </view>
                     <connections>
@@ -51,12 +89,20 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="130.53435114503816" y="-34.507042253521128"/>
+            <point key="canvasLocation" x="130.43478260869566" y="-34.821428571428569"/>
         </scene>
     </scenes>
     <resources>
+        <image name="0" width="1600" height="1059"/>
+        <image name="ActiveLikeButton" width="42" height="42"/>
+        <namedColor name="YP Background (iOS)">
+            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="YP Black (iOS)">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="YP White (iOS)">
+            <color red="0.99607843137254903" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
