--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -23,8 +23,8 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
-                        <segue destination="Bgf-Ug-ifW" kind="relationship" relationship="viewControllers" id="gsy-2J-CTe"/>
                         <segue destination="Vtu-zn-rqb" kind="relationship" relationship="viewControllers" id="BjY-Bb-XF0"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="lZD-yZ-OXY"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mOK-iz-fIF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -34,23 +34,38 @@
         <!--Single Image View Controller-->
         <scene sceneID="iLR-Ih-T5t">
             <objects>
-                <viewController id="1NR-9V-7aZ" customClass="SingleImageViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="1NR-9V-7aZ" customClass="SingleImageViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Sbt-hC-8xv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="Oh8-1s-XTC">
-                                <rect key="frame" x="0.0" y="94" width="375" height="635"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <color key="backgroundColor" name="YP Black (iOS)"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0PY-rb-0Pq">
+                                <rect key="frame" x="8" y="8" width="48" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="48" id="fef-A2-rOX"/>
+                                    <constraint firstAttribute="height" constant="48" id="pZh-8m-0M9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="nav_back_button"/>
+                                <connections>
+                                    <action selector="didTapBackButton" destination="1NR-9V-7aZ" eventType="touchUpInside" id="JAQ-UG-oej"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="OTS-Ax-21Q"/>
                         <color key="backgroundColor" name="YP Black (iOS)"/>
                         <constraints>
-                            <constraint firstItem="OTS-Ax-21Q" firstAttribute="bottom" secondItem="Oh8-1s-XTC" secondAttribute="bottom" id="1Na-hR-QCY"/>
-                            <constraint firstItem="Oh8-1s-XTC" firstAttribute="top" secondItem="OTS-Ax-21Q" secondAttribute="top" id="8CO-eW-QRx"/>
-                            <constraint firstItem="Oh8-1s-XTC" firstAttribute="leading" secondItem="OTS-Ax-21Q" secondAttribute="leading" id="AhX-q4-KcP"/>
-                            <constraint firstItem="OTS-Ax-21Q" firstAttribute="trailing" secondItem="Oh8-1s-XTC" secondAttribute="trailing" id="MZv-kf-Vff"/>
+                            <constraint firstAttribute="bottom" secondItem="Oh8-1s-XTC" secondAttribute="bottom" id="Jhk-K2-kAe"/>
+                            <constraint firstItem="Oh8-1s-XTC" firstAttribute="top" secondItem="Sbt-hC-8xv" secondAttribute="top" id="T1i-EY-A34"/>
+                            <constraint firstItem="0PY-rb-0Pq" firstAttribute="top" secondItem="OTS-Ax-21Q" secondAttribute="top" constant="8" id="Va5-D1-sgT"/>
+                            <constraint firstItem="Oh8-1s-XTC" firstAttribute="leading" secondItem="Sbt-hC-8xv" secondAttribute="leading" id="hZP-JJ-fXF"/>
+                            <constraint firstAttribute="trailing" secondItem="Oh8-1s-XTC" secondAttribute="trailing" id="l6C-p6-7vT"/>
+                            <constraint firstItem="0PY-rb-0Pq" firstAttribute="leading" secondItem="OTS-Ax-21Q" secondAttribute="leading" constant="8" id="oHV-K8-Ml5"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zh9-hy-WIb"/>
@@ -60,7 +75,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iIv-oL-nxW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2209" y="-35"/>
+            <point key="canvasLocation" x="1372" y="-35"/>
         </scene>
         <!--Profile-->
         <scene sceneID="TYv-By-d3l">
@@ -222,39 +237,16 @@
                             <constraint firstAttribute="bottom" secondItem="8XP-pr-f1W" secondAttribute="bottom" id="rVk-lj-92v"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="630-QG-1su"/>
                     <navigationItem key="navigationItem" id="kjv-dq-yh1"/>
                     <connections>
                         <outlet property="tableView" destination="8XP-pr-f1W" id="NUB-HK-k37"/>
-                        <segue destination="1NR-9V-7aZ" kind="show" identifier="ShowSingleImage" id="LTa-iv-u7x"/>
+                        <segue destination="1NR-9V-7aZ" kind="presentation" identifier="ShowSingleImage" id="CtA-Fe-f4d"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1072.8" y="-35.467980295566505"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="TGZ-cP-UCV">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Bgf-Ug-ifW" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="xiC-qD-dUR"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ee8-n8-ND5">
-                        <rect key="frame" x="0.0" y="50" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" name="YP White (iOS)"/>
-                        <color key="barTintColor" name="YP White (iOS)"/>
-                        <navigationBarAppearance key="standardAppearance">
-                            <color key="backgroundColor" name="YP Black (iOS)"/>
-                        </navigationBarAppearance>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="3GI-wY-ZGN"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jht-AB-YcV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="130.40000000000001" y="-35.467980295566505"/>
+            <point key="canvasLocation" x="129" y="-35"/>
         </scene>
     </scenes>
     <resources>
@@ -262,6 +254,7 @@
         <image name="ActiveLikeButton" width="42" height="42"/>
         <image name="Exit" width="24" height="24"/>
         <image name="avatar" width="23.333333969116211" height="23.333333969116211"/>
+        <image name="nav_back_button" width="24" height="24"/>
         <image name="tab_editorial_active" width="30" height="30"/>
         <image name="tab_profile_active" width="30" height="30"/>
         <namedColor name="YP Black (iOS)">
